--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     Let’s Help Those Who Are More In Need
                 </h1>
                 <small id="header-body-info">
-                    Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
-                    populo animal noluisse,
-                    enim
+                    The value of life is not in its duration, but in its donation. You are not important because of how
+                    long you live, you
+                    are important because of how effective you live. -Myles Munroe
                 </small>
             </div>
             <button>Donate Now</button>
@@ -34,11 +34,8 @@
         <div class="flex">
             <div class="donation-amount-info">
                 <h1 id="donation-amount-info-1">Donate Today</h1> <br>
-                <small id="donation-amount-info-2">Lorem ipsum dolor sit amet, usu cu esse possit
-                    referrentur, at eam falli
-                    deterruisset. No duo populo
-                    animal noluisse,
-                    enim</small>
+                <small id="donation-amount-info-2">You can quickly donate below mentioned amounts by clicking on the
+                    tabs or any other amount of money,just put the amount in the given field.</small>
             </div>
             <div class="donation-amount-box">
                 <ul>
@@ -70,36 +67,27 @@
         <div class="flex">
             <div class="donation-plan-info">
                 <span id="donation-plan-info-1">Our Donate Plan</span> <br>
-                <span id="donation-plan-info-2">Lorem ipsum dolor sit amet, usu cu esse possit
-                    referrentur, at eam falli
-                    deterruisset. No duo populo
-                    animal noluisse,
-                    enim</span>
+                <span id="donation-plan-info-2">Currently we have three popular packages for donating</span>
             </div>
             <div class="donation-plan flex">
                 <div class="plan" id="plan-1">
                     <img src="images/food.png" alt="">
                     <h4>Food for a family</h4>
-                    <small>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                        consequat
-                        duis enim velit
-                        mollit.</small>
+                    <small>Hunger is the most brutal rival of human kind.You can donate money to buy food for a family
+                        for a month (5000 taka).</small>
                 </div>
                 <div class="plan" id="plan-2">
                     <img src="images/shelter.png" alt="">
                     <h4>Shelter for a family</h4>
-                    <small>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                        consequat
-                        duis enim velit
-                        mollit.</small>
+                    <small>There are a lots of people who have no place for living.You can donate for a family to buy a
+                        small land to build a house (20000 taka).</small>
                 </div>
                 <div class="plan" id="plan-3">
                     <img src="images/Frame-1.png" alt="">
                     <h4>Education for a child</h4>
-                    <small>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                        consequat
-                        duis enim velit
-                        mollit.</small>
+                    <small>Education is the backbone of nation.Unfortunately lots of children can not continue their
+                        study due to poverty.You can donate for a child to continue or start his/her education (5000
+                        taka).</small>
                 </div>
             </div>
         </div>
@@ -108,8 +96,8 @@
     <section>
         <div class="recent-projects flex">
             <p id="projects-heading"><span id="text-color">Recent </span>Projects</p>
-            <span id="projects-body-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, inventore.
-                Facilis magnam amet libero maxime quo ratione laborum, consequuntur iusto.</span>
+            <span id="projects-body-info">Our organization always be there , where people need to be helped.Here are
+                some recent crying needs.Please try yo donate any amount of money to help them.</span>
             <div class="projects flex">
                 <div class="project-1 flex">
                     <div class="project-top"></div>
@@ -135,9 +123,8 @@
             <div class="flex">
                 <div class="subscribe-info">
                     <span id="subscribe-head">Get My Update</span> <br>
-                    <span id="subscribe-body">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                        deterruisset. No duo populo animal noluisse,
-                        enim</span>
+                    <span id="subscribe-body">You will get every update of your donation as well as all important
+                        notification by subscribing.Plese subscribe by putting your e-mail id.</span>
                 </div>
                 <div class="subscribe-form flex">
                     <form action="submit">
@@ -152,7 +139,7 @@
     <section>
         <div class="footer">
             <h1>be Humble</h1>
-            <p>I'm gonna do it</p>
+            <p>The measure of a life, after all, is not its duration, but its donation.</p>
         </div>
     </section>
 </body>
