modification in text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Donate Today</title>
+    <link rel="shortcut icon" href="/images/fab_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins&family=Zen+Kaku+Gothic+Antique:wght@400;700&display=swap');
@@ -34,8 +35,9 @@
         <div class="flex">
             <div class="donation-amount-info">
                 <h1 id="donation-amount-info-1">Donate Today</h1> <br>
-                <small id="donation-amount-info-2">You can quickly donate below mentioned amounts by clicking on the
-                    tabs or any other amount of money,just put the amount in the given field.</small>
+                <small id="donation-amount-info-2">You can quickly donate mentioned amounts by clicking on the
+                    tabs or any other amount of money put the amount in the given field then click "donate now"
+                    button</small>
             </div>
             <div class="donation-amount-box">
                 <ul>
@@ -124,7 +126,7 @@
                 <div class="subscribe-info">
                     <span id="subscribe-head">Get My Update</span> <br>
                     <span id="subscribe-body">You will get every update of your donation as well as all important
-                        notification by subscribing.Plese subscribe by putting your e-mail id.</span>
+                        notification by subscribing.Plese subscribe by using your e-mail id.</span>
                 </div>
                 <div class="subscribe-form flex">
                     <form action="submit">
@@ -138,7 +140,7 @@
     </section>
     <section>
         <div class="footer">
-            <h1>be Humble</h1>
+            <h1>Donation is humanity</h1>
             <p>The measure of a life, after all, is not its duration, but its donation.</p>
         </div>
     </section>
