modification in button margin

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     are important because of how effective you live. -Myles Munroe
                 </small>
             </div>
-            <button>Donate Now</button>
+            <button id="donate-now">Donate Now</button>
         </div>
 
     </section>
